[tool.poetry]
name = "peer-consensus"
version = "0.1.0"
description = "A deterministic proxy for mediating multi-LLM consensus conversations."
authors = ["Nestor Urquize <nestor.urquiza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.0"
requests = "^2.28.0"
click = "^8.1.0"
flask = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-discussion = "peer_consensus.run_discussion:run_discussion"
review-opinions = "peer_consensus.review_opinions:review_opinions"

